Closed Bug 406838 Opened 18 years ago Closed 18 years ago

Crash [@ nsDocAccessible::InvalidateCacheSubtree]

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: aaronlev, Assigned: aaronlev)

Details

(Keywords: access, crash)

Crash Data

Attachments

(1 file)

Crash report here: http://crash-stats.mozilla.com/report/index/7c35bd73-a130-11dc-b58c-001a4bd43ed6 It looks like a text control is intializing the editor and setting text in it before the doc has a pres shell.
Comment on attachment 291492 [details] [diff] [review] Get pres shell and null check it at the beginning of method -- don't try to deal with any invalidations unless doc is ready r=me
Attachment #291492 - Flags: review?(david.bolter) → review+
Attachment #291492 - Flags: approval1.9?
Attachment #291492 - Flags: approval1.9? → approval1.9+
This was fixed a while back.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Crash Signature: [@ nsDocAccessible::InvalidateCacheSubtree]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: