Bug 406838. Crash [@ nsDocAccessible::InvalidateCacheSubtree]. r=gijs, a=dsicore